Fixed bug where nodes were unclickable on Safari

--- a/frontend/src/components/Tree/Tree.module.css
+++ b/frontend/src/components/Tree/Tree.module.css
@@ -1,15 +1,6 @@
-.treeContainer {
-  width: 100vw;
-  height: calc(100vh - 140px);
-  min-height: 700px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 2em;
-}
-
 .tree {
   overflow: visible;
-  height: 10px;
-  width: 10px;
+  width: 100vw;
+  height: calc(100vh - 210px);
+  min-height: 700px;
 }
